--- a/toc.yaml
+++ b/toc.yaml
@@ -50,7 +50,6 @@ toc:
           topics:
           - /cli/cli-manage-catalogs-plugin
           - /cli/cli-ibmcloud_commands_account
-          - /cli/watson-query-cli-plugin
       - topicgroup:
           label: Other references
           links:
@@ -58,7 +57,7 @@ toc:
               label: IBM Cloud Pak for Data as a Service documentation
               href: https://dataplatform.cloud.ibm.com/docs/content/wsj/getting-started/welcome-main.html
           - link:
-              label: Console
+              label: Catalog
               href: https://{DomainName}/catalog/services/data-virtualization
 
   - navgroup:
