trying link to WQ cli

--- a/toc.yaml
+++ b/toc.yaml
@@ -50,6 +50,7 @@ toc:
           topics:
           - /cli/cli-manage-catalogs-plugin
           - /cli/cli-ibmcloud_commands_account
+          - /watson-query-cli-plugin
       - topicgroup:
           label: Other references
           links:
