moving content to main folder

--- a/toc.yaml
+++ b/toc.yaml
@@ -24,8 +24,8 @@ toc:
       id: howto
       topics:
       - provision.md
-      - connecting/connecting.md
-      - connecting/rest_api.md
+      - connecting.md
+      - rest_api.md
       - admin_overview.md
 
 #  Links to your REST API docs should be included in the Reference navigation group. For details on publishing API docs, see https://test.cloud.ibm.com/docs/api-docs.
