--- a/toc.yaml
+++ b/toc.yaml
@@ -1,5 +1,3 @@
-#  Name your file `toc.yaml`
-#  Make sure you include all nav file coding requirements, as defined in https://test.cloud.ibm.com/docs/writing?topic=writing-code-nav
 #  Anything with a fully qualified URL with `http` or `https` will get an external link icon added to the nav entry
 ---
 toc:
@@ -9,11 +7,11 @@ toc:
     audience: service
     href: /docs/data-virtualization?topic=data-virtualization-getting-started
     console-page: /catalog/services/data-virtualization
-    product-page: https://www.ibm.com/analytics/data-virtualization
+    product-page: https://www.ibm.com/products/watson-query
     path: data-virtualization
     label: IBM Watson Query
 
-#  List your getting started tutorial (getting-started.md) as the first item in the Get started nav group. See https://test.cloud.ibm.com/docs/writing?topic=writing-navigation for more details on the toc design.
+#  List your getting started tutorial (getting-started.md) as the first item in the Get started nav group.
   entries:
   - navgroup:
       id: learn
@@ -28,7 +26,7 @@ toc:
       - rest_api.md
       - admin_overview.md
 
-#  Links to your REST API docs should be included in the Reference navigation group. For details on publishing API docs, see https://test.cloud.ibm.com/docs/api-docs.
+#  Links to your REST API docs should be included in the Reference navigation group.
 #  Links to your command line reference docs should be included in the Reference navigation group.
   - navgroup:
       id: reference
